Closed Bug 1129231 Opened 9 years ago Closed 9 years ago

DirectoryProvider.js is using deprecated octal constants

Categories

(Firefox OS Graveyard :: General, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(firefox38 fixed)

RESOLVED FIXED
2.2 S5 (6feb)
Tracking Status
firefox38 --- fixed

People

(Reporter: dhylands, Assigned: dhylands)

Details

Attachments

(1 file)

I noticed the following warning in logcat:

> [JavaScript Warning: "SyntaxError: octal literals and octal escape sequences are deprecated" {file: "jar:file:///system/b2g/omni.ja!/components/DirectoryProvider.js" line: 205 column: 46 source: "        dir.create(Ci.nsIFile.DIRECTORY_TYPE, 0770);
Assignee: nobody → dhylands
Attachment #8558883 - Flags: review?(fabrice) → review+
Backed out - the patchset picked up some unintentional changes.
https://hg.mozilla.org/integration/b2g-inbound/rev/505ff14b24ee
Relanded with just the intended changes.
https://hg.mozilla.org/integration/b2g-inbound/rev/ee41a05c47ee
https://hg.mozilla.org/mozilla-central/rev/ee41a05c47ee
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.2 S5 (6feb)
FYI Octal literals are again supported in ES6. e.g. 0o770 or even 0O770
ES6 octal literals won't generate deprecation warnings.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: