Bug 1129231 - Remove a couple JS octal constant warnings. r=fabrice